fix: fix minor import errors
